Bug 950288 - Update the last run id when the browser launches so it's always up to date. r=bbondy